# FelchatV2

./: .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  env.example  pyproject.toml  railway.json  requirements-test.txt  requirements.txt  start.sh
alembic/: env.py
alembic/versions/: 20250719_105440_add_updated_at_column.py  45fdb1941a8b_add_created_at_to_user_blocks.py  68a53938392b_init.py
src/: config.py  dependencies.py  logger.py  main.py  templates_engine.py
src/chat/: ws_service.py
src/chat/repositories/abs/: chat.py
src/chat/repositories/db/: chat.py
src/chat/repositories/inmem/: chat.py
src/db/: base.py  session.py
src/di/: container.py
src/static/css/: animations.css  main.css
src/static/js/: chat.js
src/templates/: base.html  chat.html  login.html  profile.html  register.html  users.html
src/users/: api.py  models.py  schemas.py  services.py
src/users/repositories/: base.py  user_repo_db.py  user_repo_fake.py
src/users/repositories/abs/: user.py
src/users/repositories/db/: user.py
src/users/repositories/inmem/: user.py
src/web/: __init__.py  chat.py  users.py
tests/: README.md  conftest.py
tests/api/: test_chat_api.py  test_pages_api.py  test_users_api.py  test_users_web.py
