[tool.black]
line-length = 88
skip-string-normalization = false

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B"]
ignore = []
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.isort]
known-first-party = ["app"] 

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "felchat"
version = "0.1.0"
description = "A real-time chat application"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "websockets>=12.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "dependency-injector>=4.41.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "factory-boy>=3.3.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers -W ignore::pytest.PytestUnknownMarkWarning"
testpaths = ["tests"]
markers = [
    "api: marks tests as API tests",
    "web: marks tests as web tests", 
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::pytest.PytestUnknownMarkWarning",
    "ignore::pytest.PytestCollectionWarning",
] 